Mesh Boundary and Face Sets Boundary automasking not working in sculpt mode with Multires #78664

Closed
opened 2020-07-06 12:58:09 +02:00 by Julien Kaspar · 8 comments
Member

System Information
Operating system: Linux-5.3.0-59-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-06 08:27, hash: 80393a0eba

Short description of error
When sculpting on an objects multiresolution modifier subdivision levels, the automasking options "Mesh Boundary" & "Face Sets Boundary" are not working.

**System Information** Operating system: Linux-5.3.0-59-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.59 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-06 08:27, hash: `80393a0eba` **Short description of error** When sculpting on an objects multiresolution modifier subdivision levels, the automasking options "Mesh Boundary" & "Face Sets Boundary" are not working.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

#78735 was marked as duplicate of this issue

#78735 was marked as duplicate of this issue
Member

Added subscribers: @PabloDobarro, @lichtwerk

Added subscribers: @PabloDobarro, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.
Assume this is a bug @PabloDobarro ? Dont see it mentioned anywhere as limitation.
@JulienKaspar : please remember to always post a minimal example file as well...

Can confirm. Assume this is a bug @PabloDobarro ? Dont see it mentioned anywhere as limitation. @JulienKaspar : please remember to always post a minimal example file as well...
Member

Added subscriber: @amalbubble

Added subscriber: @amalbubble

This issue was referenced by e5ebaa9fd6

This issue was referenced by e5ebaa9fd6ee227427e19eafd47ae087ab95eae1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-07-09 17:49:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78664
No description provided.